large screen sizes
added cointainer with max width to stop stretch on very large screen size

--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
     <body>
         <main>
             <div class="intro">
-                <h1>Learn how to make <span class="bold">the best BBQ ribs</span> in town</h1>
-                <p>Join us for this live seminar</p>
-                <p class="top-text">Moutherwateringly delicious</p>
+                <div class="container container-intro">
+                    <h1>Learn how to make <span class="bold">the best BBQ ribs</span> in town</h1>
+                    <p>Join us for this live seminar</p>
+                    <p class="top-text">Moutherwateringly delicious</p>
+                </div>
             </div>
 
             <div class="register">
-                <h2>Become a BBQ Master</h2>
-                <p>Register today</p>
-                <p>
-                    BBQ isn't just standing in front of your grill with it on full blast
-                    and hoping for the best. It's an art! One way to speed up the process
-                    is to learn from the best. You can do just that by signing up for this
-                    free webinar!
-                </p>
-                <form action="#" class="registration__form" method="POST">
-                    <input id = fname__input type="text" placeholder="first name" required/>
-                    <input id="email__input type="text" placeholder="email" required/>
-                    <button type="submit">S</button>
-                </form>
-                <p class="bottom-text">We'll never share your information without your permission</p>
+                <div class="container">
+                    <h2>Become a BBQ Master</h2>
+                    <p>Register today</p>
+                    <p>
+                        BBQ isn't just standing in front of your grill with it on full blast
+                        and hoping for the best. It's an art! One way to speed up the process
+                        is to learn from the best. You can do just that by signing up for this
+                        free webinar!
+                    </p>
+                    <form action="#" class="registration-form" method="POST">
+                        <input id = fname-input type="text" placeholder="first name" required/>
+                        <input id="email-input type="text" placeholder="email" required/>
+                        <button class="btn" type="submit">Register</button>
+                        </div>
+                    </form>
+                    <p class="bottom-text">We'll never share your information without your permission</p>
+                </div>
             </div>
         </main>
     </body>
