transitions + background gradient
added a background gradient along with a transform

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         free webinar!
                     </p>
                     <form action="#" class="registration-form" method="POST">
-                        <input id = fname-input type="text" placeholder="first name" required/>
-                        <input id="email-input type="text" placeholder="email" required/>
-                        <button class="btn" type="submit">Register</button>
+                        <input id = fname-input type="text" placeholder="First Name" required/>
+                        <input id= email-input type="email" placeholder="Email" required/>
+                        <button class="btn btn-register" type="submit">Register</button>
                         </div>
                     </form>
                     <p class="bottom-text">We'll never share your information without your permission</p>
