Border to top text
Added a border to make top text stand out

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         is to learn from the best. You can do just that by signing up for this
                         free webinar!
                     </p>
-                    <form action="#" class="registration-form" method="POST">
+                    <form class="registration-form" action="#" method="POST">
                         <input id = fname-input type="text" placeholder="First Name" required/>
                         <input id= email-input type="email" placeholder="Email" required/>
                         <button class="btn btn-register" type="submit">Register</button>
@@ -41,5 +41,6 @@
                 </div>
             </div>
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
